tests-integration/tests/roundtrip/invalid/syntax/malformed_line/03/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/malformed_line/03/input.essence:1:6:
  |
1 | find >=lex,b,c: 
  |      ^^^^^^^^^^
Skipped tokens

tests/roundtrip/invalid/syntax/malformed_line/03/input.essence:1:6:
  |
1 | find >=lex,b,c: 
  |      ^
Missing Domain

tests/roundtrip/invalid/syntax/malformed_line/03/input.essence:1:6:
  |
1 | find >=lex,b,c: 
  |      ^
Missing <identifier>

tests/roundtrip/invalid/syntax/malformed_line/03/input.essence:1:6:
  |
1 | find >=lex,b,c: 
  |      ^
Missing :

tests/roundtrip/invalid/syntax/malformed_line/03/input.essence:2:5:
  |
2 |     int(1..3)
  |     ^^^^^^^^^
Skipped tokens

